[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyevspace"
version = "0.15.0"
authors = [
    { name="Quinton Barnes", email="devqbizzle68@gmail.com" }
]
description = "A Python 3-dimensional Euclidean vector space."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/qbizzle68/pyevspace"
"Bug Tracker" = "https://github.com/qbizzle68/pyevspace/issues"

[[tool.setuptools.ext-modules]]
name = "pyevspace._pyevspace"
include-dirs = [
    "include",
    "cpp/evspace/include",
    "cpp/evspace/external",
]
sources = [
    "src/pyevspace/pyevspacemodule.cpp",
]
