[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyevspace"
version = "0.15.0"
authors = [
    { name="Quinton Barnes", email="devqbizzle68@gmail.com" }
]
description = "A Python 3-dimensional Euclidean vector space library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "flake8-pyproject",
]
docs = [
    "sphinx",
]
dev = [
    "matplotlib",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/qbizzle68/pyevspace"
"Bug Tracker" = "https://github.com/qbizzle68/pyevspace/issues"

[[tool.setuptools.ext-modules]]
name = "pyevspace._pyevspace"
include-dirs = [
    "include",
    "cpp/evspace/include",
    "cpp/evspace/external",
]
sources = [
    "src/pyevspace/pyevspacemodule.cpp",
]
extra-compile-args = ["-std=c++17"]

[tool.flake8]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "build",
    ".venv*",
    ".tox",
    "docs",
]

[tool.pytest.ini_options]
testpaths= [
    "tests",
]
